--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
     datastore:
+        container_name: datastore
         image: postgres
         ports:
             - "5432:5432"
@@ -8,9 +9,10 @@ services:
             - POSTGRES_PASSWORD=1234
         volumes:
             - /var/lib/postgresql
-            - ./sportsdb:/docker-entrypoint-initdb.d
+            - ./datastore/sportsdb:/docker-entrypoint-initdb.d
 
     datastore_admin:
+        container_name: datastore_admin
         image: dpage/pgadmin4
         ports:
             - "5433:80"
@@ -19,3 +21,13 @@ services:
             - PGADMIN_DEFAULT_PASSWORD=1234
         volumes:
             - /var/lib/pgadmin
+
+    ci_tests:
+        container_name: ci_tests
+        build:
+            context: ci_tests
+            dockerfile: Dockerfile # optional
+        environment:
+            - DATASTORE_HOST=datastore
+        volumes:
+            - ./ci_tests:/app
