--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,6 @@ jobs:
 
             - name: show docker-compose logs
               run: docker-compose logs --tail 100
+
+            - name: curl sportsd_backend_python
+              run: curl 'http://localhost:4000/' -H 'content-type: application/json' --data-binary '{"query":"{players {id, full_name}}"}'
