--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
               run: docker-compose logs --tail 100
 
             - name: curl sportsd_backend_python
-              run: "curl http://localhost:4000 -H 'content-type: application/json' --data-binary '{\"query\":\"{players {id, full_name}}\"}'"
+              run: docker-compose run ci_tests pipenv run test_sports_backend_python
