--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
             dockerfile: Dockerfile # optional
         environment:
             - DATASTORE_HOST=datastore
+            - SPORTSDB_BACKEND_PYTHON_HOSTS=sportsdb_backend_python
 
     sportsdb_backend_python:
         container_name: sportsdb_backend_python
